--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "assets": [
       "./public/**/*",
       "./public/*",
-      "bin/**/*"
+      "bin/**/*",
+      "node_modules/figlet/fonts/ANSI Shadow.flf"
     ],
     "targets": [
       "node14-linux-x64",
@@ -31,11 +32,14 @@
   "license": "ISC",
   "dependencies": {
     "base-64": "^1.0.0",
+    "chalk": "^4.1.1",
     "download": "^8.0.0",
     "express": "^4.18.2",
     "express-ws": "^5.0.2",
+    "figlet": "^1.6.0",
     "fluent-ffmpeg": "^2.1.2",
     "fs-extra": "^11.1.1",
+    "ip": "^1.1.8",
     "log4js": "^6.9.1",
     "macaddress": "^0.5.3",
     "moment": "^2.29.4",
