--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,13 @@
-node_modules
-License.oimi
 .vscode
-*.oimi
-logs
-dist
-lib
+.idea
+logs/*
+ffandown
+node_modules
+dist/**
+media/*
+config/*
+lib/*
+*.mp4
+**/.DS_Store
+*.swp
+.DS_Store
