--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "live_tramsfrom",
+  "name": "oimi-live",
   "version": "1.0.0",
   "description": "",
   "main": "src/index.js",
@@ -31,8 +31,7 @@
   },
   "license": "ISC",
   "dependencies": {
-    "base-64": "^1.0.0",
-    "chalk": "^4.1.1",
+    "chalk": "^4.1.2",
     "download": "^8.0.0",
     "express": "^4.18.2",
     "express-ws": "^5.0.2",
@@ -41,8 +40,6 @@
     "fs-extra": "^11.1.1",
     "ip": "^1.1.8",
     "log4js": "^6.9.1",
-    "macaddress": "^0.5.3",
-    "moment": "^2.29.4",
     "utf8": "^3.0.0",
     "websocket-stream": "^5.5.2",
     "yamljs": "^0.3.0"
