--- a/.github/workflows/upload.yml
+++ b/.github/workflows/upload.yml
@@ -37,8 +37,7 @@ jobs:
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
         with:
-          files: ｜
-            "dist/*"
+          files: "dist/**"
         env:
           GITHUB_TOKEN: ${{ secrets.TOKEN }}
 
