--- a/package.json
+++ b/package.json
@@ -23,9 +23,13 @@
       "node_modules/figlet/fonts/ANSI Shadow.flf"
     ],
     "targets": [
-      "node14-linux-x64",
-      "node14-win-x64",
-      "node14-darwin-x64"
+      "node14-macos-arm64",
+      "node14-macos-x64",
+      "node14-windows-x64",
+      "node14-linuxstatic-x64",
+      "node14-linux-arm64",
+      "node14-alpine-x64",
+      "node14-alpine-arm64"
     ],
     "outputPath": "dist"
   },
