fix: add vercel

--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,7 @@
     "builds": [
         {
             "src": "bin/vercel.js",
-            "use": "@vercel/node"
+            "use": "@now/node"
         }
     ],
     "routes": [
